--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,14 @@ body {
     line-height: 145.833%;
 }
 
+@media screen and (min-width:1200px) {
+    .container {
+        max-width: 1340px;
+        padding-left: 34px;
+        padding-right: 34px;
+    }
+}
+
 a {
     text-decoration: none;
 }
@@ -42,7 +50,7 @@ h1 {
 h2 {
     color: var(--color-black);
     font-family: "Paytone One";
-    font-size: clamp(1.85rem, 4vw + 0.5rem, 65px);
+    font-size: clamp(1.9rem, 4vw + 0.5rem, 65px);
     font-style: normal;
     font-weight: 400;
     line-height: 112.308%;
@@ -400,8 +408,9 @@ header {
 }
 
 .marquee-content {
-  will-change: transform;
-  transform: translateZ(0); /* forces GPU acceleration */
+    will-change: transform;
+    transform: translateZ(0);
+    /* forces GPU acceleration */
 }
 
 /* About */
@@ -436,12 +445,6 @@ header {
     font-weight: 700;
     line-height: 133.333%;
 }
-
-.benefits-sticky {
-    position: sticky;
-    top: 160px;
-}
-
 
 /* Testimonial */
 #testimonials {
@@ -628,10 +631,11 @@ header {
     display: flex;
     align-items: center;
     gap: 14px;
+    margin-bottom: 12px;
 }
 
 .services-card__check i {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .services-card__check span {
@@ -862,4 +866,8 @@ footer {
 .recent-work__info p:nth-child(2) {
     font-size: 18px;
     line-height: 150%;
+}
+
+.recent-work-description {
+    color: var(--gray-color) !important;
 }
