--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,14 +654,20 @@ header {
 }
 
 .cta-section {
-    padding: 60px 20px;
+    padding: 60px 34px;
     text-align: center;
-    background: transparent;
+    background: rgb(249, 250, 251);
     /* subtle dark gradient */
     color: var(--color-white);
     border-radius: 20px;
     margin-top: 20px;
     color: var(--color-black-dark);
+}
+
+@media screen and (max-width:768px) {
+    .cta-section {
+        padding: 60px 24px;
+    }
 }
 
 .cta-container h3 {
