--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
 
 body {
     color: var(--gray-color);
-    font-family: "Red Hat Display";
+    font-family: "Lato";
     font-size: clamp(18px, 1.2vw + 0.25rem, 20px);
     font-style: normal;
     font-weight: 400;
@@ -38,10 +38,10 @@ a {
 
 h1 {
     color: var(--color-white);
-    font-family: "Paytone One";
+    font-family: "Montserrat";
     font-size: clamp(2.5rem, 4.1vw + 1rem, 74px);
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 100%;
     text-transform: capitalize;
     margin: 0;
@@ -49,10 +49,10 @@ h1 {
 
 h2 {
     color: var(--color-black);
-    font-family: "Paytone One";
-    font-size: clamp(1.9rem, 4vw + 0.5rem, 54px);
+    font-family: "Montserrat";
+    font-size: clamp(1.9rem, 4vw + 0.5rem, 50px);
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 112.308%;
     margin: 0;
     text-align: center;
@@ -60,10 +60,10 @@ h2 {
 
 h3 {
     color: #212529;
-    font-family: "Paytone One";
+    font-family: "Montserrat";
     font-size: clamp(1.5rem, 3vw + 0.5rem, 44px);
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 112.308%;
 }
 
@@ -102,6 +102,7 @@ h3 span {
     display: inline-flex;
     align-items: center;
     gap: 14px;
+    font-family: "Lato", sans-serif;
 }
 
 .boton-elegante::after {
@@ -248,7 +249,7 @@ h3 span {
 .hero-content span {
     display: inline-block;
     color: var(--color-blue);
-    font-family: "Paytone One";
+    font-family: "Montserrat";
     font-size: clamp(20px, 1.5vw + 0.25rem, 24px);
     font-style: normal;
     font-weight: 400;
@@ -324,11 +325,16 @@ h3 span {
     color: var(--color-white);
     font-weight: 500;
     text-transform: capitalize;
-    font-family: "Red Hat Display";
+    font-family: "Lato";
 }
 
 .hero-list-main {
-    margin-top: 16vh;
+    margin-top: 12.5vh;
+}
+
+.hero-list-main .about-content__subhead {
+   color: var(--color-white);
+   font-weight: 500;
 }
 
 .hero-btns {
@@ -363,7 +369,7 @@ h3 span {
 
 @media screen and (max-width:768px) {
     .hero-content {
-        padding-top: 20px;
+        padding-top: 40px;
         padding-bottom: 80px;
     }
 }
@@ -438,13 +444,13 @@ header {
 }
 
 .benefits-content__list h3 {
-    font-size: clamp(32px, 2.5vw + 1rem, 44px);
+    font-size: clamp(32px, 2.5vw + 1rem, 40px);
     margin: 0;
 }
 
 .benefits-content__list h4 {
     color: #212529;
-    font-family: "Red Hat Display";
+    font-family: "Lato";
     font-size: clamp(20px, 1.2vw + 0.5rem, 22px);
     font-style: normal;
     font-weight: 700;
@@ -629,6 +635,7 @@ header {
     font-size: clamp(24px, 1.5vw + 0.5rem, 26px);
     color: var(--color-blue);
     margin-top: 14px;
+    font-weight: 500;
 }
 
 .services-card p {
@@ -651,7 +658,7 @@ header {
 }
 
 .services-card__check span {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 @media screen and (max-width:992px) {
@@ -661,7 +668,7 @@ header {
     }
 
     .services-card__check span {
-        font-size: 18px;
+        font-size: 16px;
     }
 }
 
