--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ body {
     line-height: 145.833%;
 }
 
+html {
+  scroll-padding-top: 50px;
+}
+
 @media screen and (min-width:1200px) {
     .container {
         max-width: 1340px;
